--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,12 @@
             android:layout_height="50dp"
             android:text="Android Scroll分析"/>
 
+        <TextView
+            android:id="@+id/text_view3"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Android绘图机制与处理技巧"/>
+
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
