--- a/app/src/main/res/layout/activity_chapter_three.xml
+++ b/app/src/main/res/layout/activity_chapter_three.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+                                            android:id="@+id/chapter_three"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
-                                            android:id="@+id/chapter_three"
-                                            xmlns:tools="http://schemas.android.com/tools"
                                             android:paddingBottom="@dimen/activity_vertical_margin"
                                             android:paddingLeft="@dimen/activity_horizontal_margin"
                                             android:paddingRight="@dimen/activity_horizontal_margin"
-                                            android:paddingTop="@dimen/activity_vertical_margin"
-                                            tools:context="com.gavinandre.androidherosamples.chapterthree.ChapterThreeActivity">
+                                            android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
