--- a/app/src/main/res/layout/activity_drag_viewgroup.xml
+++ b/app/src/main/res/layout/activity_drag_viewgroup.xml
@@ -8,7 +8,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity">
 
-    <com.gavinandre.androidherosamples.chapterfour.DragViewGroup
+    <com.gavinandre.androidherosamples.chapterfive.draggroup.DragViewGroup
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -35,6 +35,6 @@
                 android:text="Main"/>
         </FrameLayout>
 
-    </com.gavinandre.androidherosamples.chapterfour.DragViewGroup>
+    </com.gavinandre.androidherosamples.chapterfive.draggroup.DragViewGroup>
 
 </RelativeLayout>
