--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,26 +1,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:gravity="center"
               android:orientation="vertical"
               android:paddingBottom="@dimen/activity_vertical_margin"
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              tools:context=".MainActivity">
+              android:paddingTop="@dimen/activity_vertical_margin">
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/primary_color"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:onClick="btnView"
-        android:text="DragView"/>
+        android:text="PrimaryColor"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/color_matrix"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:onClick="btnViewGroup"
-        android:text="DragViewGroup"/>
+        android:text="ColorMatrix"/>
 
+    <Button
+        android:id="@+id/pixels_effect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PixelsEffect"/>
 </LinearLayout>
