--- a/app/src/main/res/layout/activity_image_shape.xml
+++ b/app/src/main/res/layout/activity_image_shape.xml
@@ -36,4 +36,10 @@
         android:onClick="btnFlag"
         android:text="Flag" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="btnPathEffect"
+        android:text="PathEffect" />
+
 </LinearLayout>
