--- a/app/src/main/res/layout/activity_shape_round_rect.xml
+++ b/app/src/main/res/layout/activity_shape_round_rect.xml
@@ -6,11 +6,13 @@
 
     <com.gavinandre.androidherosamples.chaptersix.imageShape.RoundRectShaderView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
 
     <com.gavinandre.androidherosamples.chaptersix.imageShape.RoundRectXfermodeView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
 
 
 </LinearLayout>
