--- a/app/src/main/res/layout/activity_chapter_twelve.xml
+++ b/app/src/main/res/layout/activity_chapter_twelve.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-                                            xmlns:tools="http://schemas.android.com/tools"
-                                            android:id="@+id/activity_main"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:paddingBottom="@dimen/activity_vertical_margin"
                                             android:paddingLeft="@dimen/activity_horizontal_margin"
                                             android:paddingRight="@dimen/activity_horizontal_margin"
-                                            android:paddingTop="@dimen/activity_vertical_margin"
-                                            tools:context="com.gavinandre.androidherosamples.MainActivity">
+                                            android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,34 +13,28 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text_view1"
+            android:id="@+id/chapter_twelve_text_view1"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Android控件构架与自定义控件详解"/>
+            android:text="Palette"/>
 
         <TextView
-            android:id="@+id/text_view2"
+            android:id="@+id/chapter_twelve_text_view2"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Android Scroll分析"/>
+            android:text="Elevation"/>
 
         <TextView
-            android:id="@+id/text_view3"
+            android:id="@+id/chapter_twelve_text_view3"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Android绘图机制与处理技巧"/>
+            android:text="Tinting"/>
 
         <TextView
-            android:id="@+id/text_view4"
+            android:id="@+id/chapter_twelve_text_view4"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Android动画机制与使用技巧"/>
-
-        <TextView
-            android:id="@+id/text_view5"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="Android 5.X 新特性详解"/>
+            android:text="Clipping"/>
 
     </LinearLayout>
 
