--- a/app/src/main/res/layout/activity_chapter_twelve.xml
+++ b/app/src/main/res/layout/activity_chapter_twelve.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-                                            android:layout_width="match_parent"
-                                            android:layout_height="match_parent"
-                                            android:paddingBottom="@dimen/activity_vertical_margin"
-                                            android:paddingLeft="@dimen/activity_horizontal_margin"
-                                            android:paddingRight="@dimen/activity_horizontal_margin"
-                                            android:paddingTop="@dimen/activity_vertical_margin">
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,6 +54,12 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="Transtion"/>
+
+        <TextView
+            android:id="@+id/chapter_twelve_text_view8"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="MDAnim"/>
 
     </LinearLayout>
 
