--- a/app/src/main/res/layout/activity_chapter_twelve.xml
+++ b/app/src/main/res/layout/activity_chapter_twelve.xml
@@ -61,6 +61,18 @@
             android:layout_height="50dp"
             android:text="MDAnim"/>
 
+        <TextView
+            android:id="@+id/chapter_twelve_text_view9"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Toolbar"/>
+
+        <TextView
+            android:id="@+id/chapter_twelve_text_view10"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Notification"/>
+
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
